# PLFM_RADAR

./: .gitignore  README.md  fix_annular.py  fix_pcb_vias.py  fix_via_clearance.py  pyproject.toml
4_Schematics and Boards Layout/4_6_Schematics/FrequencySynthesizerBoard/: Clocks_Freq_Synth_board-B_Cu.gbr  Clocks_Freq_Synth_board-B_Mask.gbr  Clocks_Freq_Synth_board-B_Paste.gbr  Clocks_Freq_Synth_board-B_Silkscreen.gbr  Clocks_Freq_Synth_board-Edge_Cuts.gbr  Clocks_Freq_Synth_board-F_Cu.gbr  Clocks_Freq_Synth_board-F_Mask.gbr  Clocks_Freq_Synth_board-F_Paste.gbr  Clocks_Freq_Synth_board-F_Silkscreen.gbr  Clocks_Freq_Synth_board-In1_Cu.gbr  Clocks_Freq_Synth_board-In2_Cu.gbr  Clocks_Freq_Synth_board-In3_Cu.gbr  Clocks_Freq_Synth_board-In4_Cu.gbr  Clocks_Freq_Synth_board-NPTH.drl  Clocks_Freq_Synth_board-PTH.drl  Clocks_Freq_Synth_board-eagle-import.kicad_sym  Clocks_Freq_Synth_board-job.gbrjob  Clocks_Freq_Synth_board.csv  Clocks_Freq_Synth_board.drl  Clocks_Freq_Synth_board.kicad_dru  Clocks_Freq_Synth_board.kicad_pcb  Clocks_Freq_Synth_board.kicad_pro  Clocks_Freq_Synth_board.kicad_sch  Clocks_Freq_Synth_board_1.kicad_sch  Clocks_Freq_Synth_board_BOM_JLCPCB.csv  Clocks_Freq_Synth_board_CPL_JLCPCB.csv  JLCPCB_BOM_Clocks_Freq_Synth.xls  sym-lib-table
4_Schematics and Boards Layout/4_6_Schematics/MCU_Subsystem/: Comm_Interfaces.kicad_sch  FPGA_Interface.kicad_sch  MCU_Core.kicad_sch  MCU_Subsystem.kicad_pro  MCU_Subsystem.kicad_sch  Power_Sequencing.kicad_sch  Sensors_Actuators.kicad_sch  generate_schematics.py
4_Schematics and Boards Layout/4_6_Schematics/MainBoard/: RADAR_Main_Board-eagle-import.kicad_sym  RADAR_Main_Board.kicad_pro  RADAR_Main_Board.kicad_sch  RADAR_Main_Board_1.kicad_sch  RADAR_Main_Board_2.kicad_sch  RADAR_Main_Board_2.kicad_sch.bak_pre_erc_fix  RADAR_Main_Board_3.kicad_sch  RADAR_Main_Board_4.kicad_sch  U42_CONNECTION_MAP.md  U42_NEW_CONNECTIONS_GUIDE.md  fp-lib-table  sym-lib-table
5_Simulations/Antenna/: aperture_coupled_aeris10_v2.py  array_factor_adar1000_aeris10.py  edge_fed_aeris10_v3.py  edge_fed_row_aeris10_v3.py  edge_fed_row_nf2ff_aeris10_v3.py  probe_fed_aeris10_v3.py  probe_fed_array_aeris10_v3.py  production_beams_verify_aeris10.py
9_Firmware/9_1_Microcontroller/9_1_1_C_Cpp_Libraries/: stm32_spi.c  (+2 more)
9_Firmware/9_2_FPGA/: ad9484_interface_400m.v  blinky_ft601_test.v  bram_playback.v  cdc_async_fifo.v  cfar_ca.v  chirp_memory_loader_param.v  chirp_reference_rom.v  chirp_scheduler.v  cic_decimator_4x_enhanced.v  ddc_400m.v  doppler_processor.v  fft_engine.v  fft_engine_axi_bridge.v  fft_twiddle_2048.mem  fir_lowpass.v  fpga_self_test.v  long_chirp_seg0_i.mem  long_chirp_seg0_q.mem  long_chirp_seg1_i.mem  long_chirp_seg1_q.mem  matched_filter_multi_segment.v  matched_filter_processing_chain.v  mti_canceller.v  radar_mode_controller.v  radar_params.vh  radar_receiver_final.v  radar_system_top.v  radar_system_top_50t.v  radar_system_top_te0713_dev.v  radar_system_top_te0713_playback.v  radar_system_top_te0713_umft601x_dev.v  radar_system_top_te0713_umft601x_playback.v  radar_system_top_te0713_vio.v  range_bin_decimator.v  run_regression.sh  rx_gain_control.v  uart_rx.v  uart_self_test_reporter.v  uart_tx.v  uart_tx_blaster.v  (+3 more)
9_Firmware/9_3_GUI/: GUI_radar_dashboard_v2.py  GUI_versions.txt  diag_ft601.py  diag_ft601_burst.py  diag_ft601_v7b.py  diag_v8b_throughput.py  diagnostic_v8b.py  ft601_stream_server.py  radar_dashboard.py  radar_protocol.py  test_GUI_V65_Tk.py  test_ft601_streaming.py  test_radar_dashboard.py  test_radar_dashboard_v2.py  test_radar_protocol_v7c.py  test_v7.py  uart_self_test_reader.py  v9_diagnostic.py  v9b_hw_diagnostic.py  v9c_alpha_sweep.py
docs/: board_smoke_test_guide.md  freq_synth_drc_fix_guide.md
docs/artifacts/: te0713-te0701-umft601x-dev-2026-03-22.md  te0713-te0701-umft601x-dev-timing-2026-03-22.rpt
(+186 files in other folders)
